--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,12 @@ header {
       border: 0;
       font-family: "charmonman-regular";
       font-size: 1.5rem;
+      color: #d3d2d2;
+
+      &:hover{
+        color: #e6b672;
+        border-bottom: 1px solid #e6b672;
+      }
     }
     >img{
 
@@ -57,7 +63,7 @@ div#content{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(211, 210, 210);
+    background-color: #d3d2d2;
     padding: 48px 0px 48px 0px;
     gap: 100px;
     margin-bottom: 48px;
