--- a/src/styles.css
+++ b/src/styles.css
@@ -18,12 +18,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 24px;
-  font-family: "ubuntu-light";
 }
 
 :root{
   background-color: #2d2b2c;
+  font-size: 24px;
+  font-family: "ubuntu-light";
 }
 
 header {
@@ -86,5 +86,47 @@ div#content{
         border-radius: 4px;
       }
     }
+  }
+
+  >div.menu-tab{
+    background-color: #d3d2d2;
+    padding: 48px 0px 48px 0px;
+    margin-bottom: 48px;
+
+    h2.menu-category{
+      text-align: center;
+    }
+
+    div.menu-list{
+      display: flex;
+      padding: 36px;
+      justify-content: center;
+
+      >div.menu-item{
+        border: 1px solid #2d2b2c;
+        border-radius: 16px;
+        width: 400px;
+        padding: 16px;
+        background-color: #2d2b2c;
+        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+
+        >h3{
+          font-size: 1rem;
+          color: #e6b672;
+          margin-bottom: 16px;
+          font-family: "charmonman-regular";
+          border-bottom: 1px solid #e6b672;
+          letter-spacing: 0.2rem;
+        }
+
+        >p{
+          font-size: 0.7rem;
+          color: #d3d2d2;
+          font-weight: bold;
+          letter-spacing: 0.1rem;
+        }
+      }
+    }
+
   }
 }
