--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,9 @@ div#content{
 
     h2.menu-category{
       text-align: center;
+      font-family: "ubuntu-italic";
+      font-weight: 100;
+      font-size: 1.3rem;
     }
 
     div.menu-list{
@@ -130,6 +133,23 @@ div#content{
         }
       }
     }
+  }
 
+  div.contact-tab{
+    background-color: #d3d2d2;
+    padding: 48px 36px 48px 36px;
+
+    div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 48px;
+      >h2{
+        font-size: 1.3rem;
+        font-weight: 500;
+        font-family: "ubuntu-italic";
+      }
+    }
   }
 }
